discussion/kv_engine/178716/178716_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

Modernize parse_config [1/2]

Use a std::string view for the input string and make
it callback based instead.

Change-Id: I74f34fb4bf9959029589c199c1b1444a97df2a89

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-08-11 06:24:07.000000000
Message: 
Uploaded patch set 7: Patch Set 6 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-11 06:53:08.000000000
Message: 
Patch Set 7: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19376/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/config_parser.h:83:12: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
           config_item items[],
           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19376/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19376/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48260/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48260/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40543/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/build/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
fatal error: "gtest/gtest.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40543/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9066/ : FAILURE

Compile error at [2022-08-11T06:26:17.255Z] tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
fatal error: "gtest/gtest.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9066/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21312/ : FAILURE

Failure of GoogleTest "TransportProtocols/XattrTest.mb25928_SystemCanExceedDocumentLimit/Mcbp_XattrYes_JsonYes_SnappyYes":

<pre>
[ RUN      ] TransportProtocols/XattrTest.mb25928_SystemCanExceedDocumentLimit/Mcbp_XattrYes_JsonYes_SnappyYes
[2022-08-11T06:43:17.145Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/tests/testapp/testapp_xattr.cc:1929: Failure
[2022-08-11T06:43:17.145Z] Value of: resp.isSuccess()
[2022-08-11T06:43:17.145Z]   Actual: false
[2022-08-11T06:43:17.145Z] Expected: true
[2022-08-11T06:43:17.145Z] Expected to be able to store system xattrs
[2022-08-11T06:43:17.145Z] [  FAILED  ] TransportProtocols/XattrTest.mb25928_SystemCanExceedDocumentLimit/Mcbp_XattrYes_JsonYes_SnappyYes, where GetParam() = (Mcbp, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>) (158 ms)
TransportProtocols/XattrTest.mb25928_SystemCanExceedDocumentLimit/Mcbp_XattrYes_JsonYes_SnappyYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21312/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18588/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20558/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9163/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21662/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22386/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29690/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
